# CPP_LibTemplate

./: CMakeLists.txt  README.md
include/: foo.hpp
src/: foo.cpp
